--- a/src/app/external-register/external-register.component.html
+++ b/src/app/external-register/external-register.component.html
@@ -9,57 +9,48 @@
         <!-- <mat-card-subtitle>
           Datos de generales para el usuario
         </mat-card-subtitle> -->
+
       </mat-card-header>
       <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
         <mat-form-field fxFlex fxFlex.xs>
-          <input required matInput placeholder="Nombre" maxlength="20" formControlName="numero">
+          <input required matInput placeholder="Nombre" maxlength="20" formControlName="FirstName">
         </mat-form-field>
         <mat-form-field fxFlex fxFlex.xs>
-          <input required matInput placeholder="Apellido" maxlength="20" formControlName="ciudad">
+          <input required matInput placeholder="Apellido" maxlength="20" formControlName="LastName">
         </mat-form-field>
       </div>
+
       <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
         <mat-form-field fxFlex fxFlex.xs>
-          <mat-select required formControlName="expediente" placeholder="Identificación">
-            <mat-option *ngFor="let role of roles" [value]="role._id">
-              {{role.Name}}
-            </mat-option>
-          </mat-select>
+          <input  required type="email" maxlength="50" matInput placeholder="Email" formControlName="Email">
         </mat-form-field>
         <mat-form-field fxFlex fxFlex.xs>
-          <input required type="number" maxlength="10" matInput placeholder="Dirección"
-            formControlName="referenciaC">
+          <input  required type="number" maxlength="200" matInput placeholder="Identificacion" formControlName="Identification">
         </mat-form-field>
       </div>
+
       <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
+    
         <mat-form-field fxFlex fxFlex.xs>
-          <input type="text" maxlength="50" matInput placeholder="Ciudad" formControlName="direccion">
+          <input  required type="text" maxlength="200" matInput placeholder="Username" formControlName="Username">
         </mat-form-field>
         <mat-form-field fxFlex fxFlex.xs>
-          <input required type="number" maxlength="10" matInput placeholder="Propietario"
-            formControlName="propietario">
+          <input required  type="password" maxlength="200" matInput placeholder="Password" formControlName="Password">
         </mat-form-field>
+       
       </div>
-      <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
-        <mat-form-field fxFlex fxFlex.xs>
-          <input type="text" maxlength="200" matInput placeholder="Resolución" formControlName="resolucion">
-        </mat-form-field>
-        <mat-form-field fxFlex fxFlex.xs>
-          <input type="text" maxlength="200" matInput placeholder="Valor" formControlName="valor">
-        </mat-form-field>
-      </div>
+
     </mat-card>
     <br>
 
     <br>
 
     <div fxLayoutAlign="start start" fxLayoutGap="10px">
+      <button mat-button mat-raised-button color="warn" (click)="cancel()">Cancelar</button>
+      <button mat-button type="reset" >Limpiar</button>
       <button mat-button mat-raised-button color="primary" [disabled]="registerUserForm.invalid" (click)="save()">
         Enviar
       </button>
-      <button mat-button type="reset" >Limpiar</button>
-      <button mat-button mat-raised-button color="warn" (click)="cancel()">Cancelar</button>
-
     </div>
   </div>
 
