--- a/src/app/archivo-determinado/archivo-determinado.component.html
+++ b/src/app/archivo-determinado/archivo-determinado.component.html
@@ -7,15 +7,15 @@
         <mat-card>
           <mat-card-header>
             <mat-card-title>
-              Archivo determinado
+            Respuesta de Archivo de Determinación
             </mat-card-title>
             <mat-card-subtitle>
-              Datos de generales para la creación del archivo determinado.
+              Datos generales para la creación.
             </mat-card-subtitle>
           </mat-card-header>
           <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
             <mat-form-field fxFlex fxFlex.xs>
-              <input required matInput placeholder="Número" maxlength="20" formControlName="No_de_Oficio_EXT">
+              <input required type="number" matInput placeholder="Número del Oficio EXT" maxlength="20" formControlName="No_de_Oficio_EXT">
             </mat-form-field>
             <mat-form-field fxFlex fxFlex.xs>
               <input required matInput placeholder="Nombre" maxlength="20" formControlName="Nombre">
@@ -23,11 +23,11 @@
           </div>
           <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
             <mat-form-field fxFlex fxFlex.xs>
-              <input required type="number" maxlength="10" matInput placeholder="Asunto"
+              <input required type="text"  matInput placeholder="Asunto"
                 formControlName="Asunto">
             </mat-form-field>
             <mat-form-field fxFlex fxFlex.xs>
-              <input required type="number" maxlength="10" matInput placeholder="Firma"
+              <input required type="text" matInput placeholder="Firma del Responsable"
                 formControlName="Firma_del_Responsable">
             </mat-form-field>
           </div>
@@ -36,9 +36,9 @@
         </mat-card>
         <br>
         <div fxLayoutAlign="start start" fxLayoutGap="10px">
-          <button mat-button type="reset" *ngIf="isEdit == false ">Limpiar</button>
+          <button mat-button type="reset" >Limpiar</button>
           <button mat-button mat-raised-button color="primary" [disabled]="registerUserForm.invalid" (click)="save()">
-            Guardar archivo determinado
+            Guardar archivo Determinación
           </button>
           <button mat-button mat-raised-button color="warn" (click)="onNoClick()">Cancelar</button>
 
@@ -54,7 +54,7 @@
 
             <!-- Position Column -->
             <ng-container matColumnDef="numero">
-              <th mat-header-cell *matHeaderCellDef> No. </th>
+              <th mat-header-cell *matHeaderCellDef> No. de Respuesta </th>
               <td mat-cell *matCellDef="let element"> {{element.No_de_Oficio_EXT}} </td>
             </ng-container>
 
@@ -72,10 +72,19 @@
 
             <!-- Symbol Column -->
             <ng-container matColumnDef="firma">
-              <th mat-header-cell *matHeaderCellDef> Firma </th>
+              <th mat-header-cell *matHeaderCellDef> Firma del Responsable </th>
               <td mat-cell *matCellDef="let element"> {{element.Firma_del_Responsable}} </td>
             </ng-container>
 
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef>Accion</th>
+              <td mat-cell *matCellDef="let element">
+
+               <button mat-icon-button color="accent" matTooltip="Eliminar" (click)="delete(element._id)" >
+                 <mat-icon>clear</mat-icon> 
+                </button>
+              </td>
+            </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
