--- a/src/app/notificacion-correspondencia/notificacion-correspondencia.component.html
+++ b/src/app/notificacion-correspondencia/notificacion-correspondencia.component.html
@@ -22,72 +22,78 @@
             </mat-form-field>
           </div>
           <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
-              <mat-form-field fxFlex fxFlex.xs>
-                  <input required type="number" maxlength="10" matInput placeholder="Referencia catastral"
-                    formControlName="Referencia_Catas">
-                </mat-form-field>
             <mat-form-field fxFlex fxFlex.xs>
-              <input required type="number" maxlength="10" matInput placeholder="Direccion"
-                formControlName="Direccion">
+              <input required type="number" maxlength="10" matInput placeholder="Referencia catastral"
+                formControlName="Referencia_Catas">
+            </mat-form-field>
+            <mat-form-field fxFlex fxFlex.xs>
+              <input required type="text" maxlength="128" matInput placeholder="Direccion" formControlName="Direccion">
             </mat-form-field>
           </div>
           <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
             <mat-form-field fxFlex fxFlex.xs>
-              <input type="text" maxlength="50" matInput placeholder="Propietario" formControlName="Propietario">
+              <input type="text" maxlength="128" matInput placeholder="Propietario" formControlName="Propietario">
             </mat-form-field>
-            
+
           </div>
-          
+
         </mat-card>
         <br>
         <div fxLayoutAlign="start start" fxLayoutGap="10px">
-          <button mat-button type="reset" *ngIf="isEdit == false ">Limpiar</button>
           <button mat-button mat-raised-button color="primary" [disabled]="registerUserForm.invalid" (click)="save()">
-            Guardar mandamiento de pago
+            Guardar notificación de correspondencia
           </button>
-          <button mat-button mat-raised-button color="warn" (click)="onNoClick()">Cancelar</button>
+          <button mat-button type="reset" >Limpiar</button>
 
         </div>
       </mat-tab>
 
-      <mat-tab label="Listado"> 
+      <mat-tab label="Listado">
         <div fxLayout="row">
-            <table mat-table fxFlex [dataSource]="dataSource" class="mat-elevation-z8">
+          <table mat-table fxFlex [dataSource]="dataSource" class="mat-elevation-z8">
 
-                <!--- Note that these columns can be defined in any order.
+            <!--- Note that these columns can be defined in any order.
                       The actual rendered columns are set as a property on the row definition" -->
-              
-                <!-- Position Column -->
-                <ng-container matColumnDef="ciudad">
-                  <th mat-header-cell *matHeaderCellDef> Ciudad </th>
-                  <td mat-cell *matCellDef="let element"> {{element.Ciudad}} </td>
-                </ng-container>
-              
-                <!-- Name Column -->
-                <ng-container matColumnDef="nombre">
-                  <th mat-header-cell *matHeaderCellDef> Nombre </th>
-                  <td mat-cell *matCellDef="let element"> {{element.Nombre}} </td>
-                </ng-container>
-              
-                <!-- Weight Column -->
-                <ng-container matColumnDef="referencia">
-                  <th mat-header-cell *matHeaderCellDef> Referencia catastral </th>
-                  <td mat-cell *matCellDef="let element"> {{element.Referencia_Catas}} </td>
-                </ng-container>
-              
-                <!-- Symbol Column -->
-                <ng-container matColumnDef="propietario">
-                  <th mat-header-cell *matHeaderCellDef> Propietario </th>
-                  <td mat-cell *matCellDef="let element"> {{element.Propietario}} </td>
-                </ng-container>
-              
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-              </table>
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="ciudad">
+              <th mat-header-cell *matHeaderCellDef> Ciudad </th>
+              <td mat-cell *matCellDef="let element"> {{element.Ciudad}} </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="nombre">
+              <th mat-header-cell *matHeaderCellDef> Nombre </th>
+              <td mat-cell *matCellDef="let element"> {{element.Nombre}} </td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="referencia">
+              <th mat-header-cell *matHeaderCellDef> Referencia catastral </th>
+              <td mat-cell *matCellDef="let element"> {{element.Referencia_Catas}} </td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="propietario">
+              <th mat-header-cell *matHeaderCellDef> Propietario </th>
+              <td mat-cell *matCellDef="let element"> {{element.Propietario}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="acciones">
+                <th mat-header-cell *matHeaderCellDef> Acciones </th>
+                <td mat-cell *matCellDef="let element"> 
+                    <button mat-icon-button color="accent" matTooltip="Eliminar" (click)="delete(element._id)" >
+                      <mat-icon>clear</mat-icon> 
+                   </button>
+              </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
         </div>
         <mat-paginator [length]="length" [pageSizeOptions]="[5, 10, 20]" (page)="list($event)">
         </mat-paginator>
-            
+
       </mat-tab>
     </mat-tab-group>
 
