--- a/src/app/notificacion-embargo/notificacion-embargo.component.html
+++ b/src/app/notificacion-embargo/notificacion-embargo.component.html
@@ -16,7 +16,7 @@
           
           <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
               <mat-form-field fxFlex fxFlex.xs>
-                  <input required type="number" maxlength="10" matInput placeholder="Expediente"
+                  <input required type="text" maxlength="128" matInput placeholder="Expediente"
                     formControlName="Expediente">
                 </mat-form-field>
             <mat-form-field fxFlex fxFlex.xs>
@@ -41,11 +41,10 @@
         </mat-card>
         <br>
         <div fxLayoutAlign="start start" fxLayoutGap="10px">
-          <button mat-button type="reset" *ngIf="isEdit == false ">Limpiar</button>
           <button mat-button mat-raised-button color="primary" [disabled]="registerUserForm.invalid" (click)="save()">
             Guardar notificación embargo
           </button>
-          <button mat-button mat-raised-button color="warn" (click)="onNoClick()">Cancelar</button>
+          <button mat-button type="reset">Limpiar</button>
 
         </div>
       </mat-tab>
@@ -73,6 +72,14 @@
                   <td mat-cell *matCellDef="let element"> {{element.Matricula}} </td>
                 </ng-container>
               
+                <ng-container matColumnDef="acciones">
+                    <th mat-header-cell *matHeaderCellDef> Acciones </th>
+                    <td mat-cell *matCellDef="let element"> 
+                        <button mat-icon-button color="accent" matTooltip="Eliminar" (click)="delete(element._id)" >
+                          <mat-icon>clear</mat-icon> 
+                       </button>
+                  </ng-container>
+                  
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
               </table>
