--- a/src/app/notificacion-mensajeria/notificacion-mensajeria.component.html
+++ b/src/app/notificacion-mensajeria/notificacion-mensajeria.component.html
@@ -23,7 +23,7 @@
           </div>
           <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
             <mat-form-field fxFlex fxFlex.xs>
-              <input required type="number" maxlength="10" matInput placeholder="Dirección" formControlName="Direccion">
+              <input required type="text" maxlength="128" matInput placeholder="Dirección" formControlName="Direccion">
             </mat-form-field>
             <mat-form-field fxFlex fxFlex.xs>
               <input type="text" maxlength="50" matInput placeholder="Firma" formControlName="Firma_recibido">
@@ -68,6 +68,14 @@
               <th mat-header-cell *matHeaderCellDef> Firma </th>
               <td mat-cell *matCellDef="let element"> {{element.Firma_recibido}} </td>
             </ng-container>
+            <ng-container matColumnDef="acciones">
+                <th mat-header-cell *matHeaderCellDef> Acciones </th>
+                <td mat-cell *matCellDef="let element"> 
+                    <button mat-icon-button color="accent" matTooltip="Eliminar" (click)="delete(element._id)" >
+                      <mat-icon>clear</mat-icon> 
+                   </button>
+              </ng-container>
+            
 
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
