--- a/src/app/resolucion-vigente/resolucion-vigente.component.html
+++ b/src/app/resolucion-vigente/resolucion-vigente.component.html
@@ -78,6 +78,16 @@
                   <th mat-header-cell *matHeaderCellDef> Valor </th>
                   <td mat-cell *matCellDef="let element"> {{element.Valor}} </td>
                 </ng-container>
+
+
+            <ng-container matColumnDef="acciones">
+                <th mat-header-cell *matHeaderCellDef> Acciones </th>
+                <td mat-cell *matCellDef="let element">
+                  <button mat-icon-button color="accent" matTooltip="Eliminar" (click)="delete(element._id)">
+                    <mat-icon>clear</mat-icon>
+                  </button>
+              </ng-container>
+                
               
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
