--- a/src/app/solicitud-abogado/solicitud-abogado.component.html
+++ b/src/app/solicitud-abogado/solicitud-abogado.component.html
@@ -23,60 +23,65 @@
             </mat-form-field>
           </div>
           <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
-              
-              <mat-form-field fxFlex fxFlex.xs>
-                  <input required type="number" maxlength="10" matInput placeholder="Asunto"
-                    formControlName="Asunto">
-                </mat-form-field>
+
+            <mat-form-field fxFlex fxFlex.xs>
+              <input required type="text" maxlength="128" matInput placeholder="Asunto" formControlName="Asunto">
+            </mat-form-field>
             <mat-form-field fxFlex fxFlex.xs>
               <input required type="number" maxlength="10" matInput placeholder="Firma abogado"
                 formControlName="Firma_de_Abogado_Solicitante">
             </mat-form-field>
           </div>
-          
         </mat-card>
         <br>
         <div fxLayoutAlign="start start" fxLayoutGap="10px">
-          <button mat-button type="reset" *ngIf="isEdit == false ">Limpiar</button>
           <button mat-button mat-raised-button color="primary" [disabled]="registerUserForm.invalid" (click)="save()">
             Guardar solicitud de abogado
           </button>
-          <button mat-button mat-raised-button color="warn" (click)="onNoClick()">Cancelar</button>
+          <button mat-button type="reset">Limpiar</button>
 
         </div>
       </mat-tab>
 
-      <mat-tab label="Listado"> 
+      <mat-tab label="Listado">
         <div fxLayout="row">
-            <table mat-table fxFlex [dataSource]="dataSource" class="mat-elevation-z8">
+          <table mat-table fxFlex [dataSource]="dataSource" class="mat-elevation-z8">
 
-                <ng-container matColumnDef="numero">
-                  <th mat-header-cell *matHeaderCellDef> Número. </th>
-                  <td mat-cell *matCellDef="let element"> {{element.No_de_Oficio_EXT}} </td>
-                </ng-container>
-              
-                <ng-container matColumnDef="nombre">
-                  <th mat-header-cell *matHeaderCellDef> Nombre </th>
-                  <td mat-cell *matCellDef="let element"> {{element.Nombre}} </td>
-                </ng-container>
-              
-                <ng-container matColumnDef="asunto">
-                  <th mat-header-cell *matHeaderCellDef> Asunto </th>
-                  <td mat-cell *matCellDef="let element"> {{element.asunto}} </td>
-                </ng-container>
-              
-                <ng-container matColumnDef="firma">
-                  <th mat-header-cell *matHeaderCellDef> Firma </th>
-                  <td mat-cell *matCellDef="let element"> {{element.Firma_de_Abogado_Solicitante}} </td>
-                </ng-container>
-              
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-              </table>
+            <ng-container matColumnDef="numero">
+              <th mat-header-cell *matHeaderCellDef> Número. </th>
+              <td mat-cell *matCellDef="let element"> {{element.No_de_Oficio_EXT}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="nombre">
+              <th mat-header-cell *matHeaderCellDef> Nombre </th>
+              <td mat-cell *matCellDef="let element"> {{element.Nombre}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="asunto">
+              <th mat-header-cell *matHeaderCellDef> Asunto </th>
+              <td mat-cell *matCellDef="let element"> {{element.asunto}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="firma">
+              <th mat-header-cell *matHeaderCellDef> Firma </th>
+              <td mat-cell *matCellDef="let element"> {{element.Firma_de_Abogado_Solicitante}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="acciones">
+              <th mat-header-cell *matHeaderCellDef> Acciones </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="accent" matTooltip="Eliminar" (click)="delete(element._id)">
+                  <mat-icon>clear</mat-icon>
+                </button>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
         </div>
         <mat-paginator [length]="length" [pageSizeOptions]="[5, 10, 20]" (page)="list($event)">
-          </mat-paginator>
-  
+        </mat-paginator>
+
       </mat-tab>
     </mat-tab-group>
 
