--- a/src/app/solicitud-abogado/solicitud-abogado.component.html
+++ b/src/app/solicitud-abogado/solicitud-abogado.component.html
@@ -16,7 +16,7 @@
           </mat-card-header>
           <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
             <mat-form-field fxFlex fxFlex.xs>
-              <input required matInput placeholder="Número" maxlength="20" formControlName="No_de_Oficio_EXT">
+              <input required matInput placeholder="Número del Oficio EXT" maxlength="20" formControlName="No_de_Oficio_EXT">
             </mat-form-field>
             <mat-form-field fxFlex fxFlex.xs>
               <input required matInput placeholder="Nombre" maxlength="20" formControlName="Nombre">
@@ -28,7 +28,7 @@
               <input required type="text" maxlength="128" matInput placeholder="Asunto" formControlName="Asunto">
             </mat-form-field>
             <mat-form-field fxFlex fxFlex.xs>
-              <input required type="number" maxlength="10" matInput placeholder="Firma abogado"
+              <input required type="text" maxlength="10" matInput placeholder="Firma Abogado Solicitante"
                 formControlName="Firma_de_Abogado_Solicitante">
             </mat-form-field>
           </div>
