--- a/src/app/mandamiento-pago/mandamiento-pago.component.html
+++ b/src/app/mandamiento-pago/mandamiento-pago.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="registerUserForm">
+<form #formDirective="ngForm" [formGroup]="registerUserForm">
   <div class="grid-container">
 
 
@@ -97,6 +97,18 @@
                     <th mat-header-cell *matHeaderCellDef> Ciudad </th>
                     <td mat-cell *matCellDef="let element"> {{element.Ciudad}} </td>
                   </ng-container>
+
+
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef>Accion</th>
+                <td mat-cell *matCellDef="let element">
+              
+                 
+                 <button mat-icon-button color="accent" matTooltip="Eliminar" (click)="delete(element._id)" >
+                   <mat-icon>clear</mat-icon> 
+                  </button>
+                </td>
+              </ng-container>
                 
                   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
