--- a/src/app/notificacion-correspondencia/notificacion-correspondencia.component.html
+++ b/src/app/notificacion-correspondencia/notificacion-correspondencia.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="registerUserForm">
+<form #formDirective="ngForm" [formGroup]="registerUserForm">
   <div class="grid-container">
 
     <mat-tab-group>
@@ -7,7 +7,7 @@
         <mat-card>
           <mat-card-header>
             <mat-card-title>
-              Notificación de correspondencia
+                Notificación por Correo
             </mat-card-title>
             <mat-card-subtitle>
               Datos de generales para la creación del notificación.
@@ -23,7 +23,7 @@
           </div>
           <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
             <mat-form-field fxFlex fxFlex.xs>
-              <input required type="number" maxlength="10" matInput placeholder="Referencia catastral"
+              <input required type="number" maxlength="10" matInput placeholder="Referencia Catastral"
                 formControlName="Referencia_Catas">
             </mat-form-field>
             <mat-form-field fxFlex fxFlex.xs>
@@ -41,7 +41,7 @@
         <br>
         <div fxLayoutAlign="start start" fxLayoutGap="10px">
           <button mat-button mat-raised-button color="primary" [disabled]="registerUserForm.invalid" (click)="save()">
-            Guardar notificación de correspondencia
+            Guardar Notificación por Correo
           </button>
           <button mat-button type="reset" >Limpiar</button>
 
