--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
   <mat-card fxFlex="50">
     <div fxLayout="row" fxLayoutAlign="center center">
       <h1>
-        Impuesto predial
+        Archivo de Determinación
       </h1>
 
     </div>
